<resources>
    <string name="app_name">Bubble Shooter Pro</string>
    <string name="play">PLAY</string>
    <string name="levels">LEVELS</string>
    <string name="settings">SETTINGS</string>
    <string name="level_complete">LEVEL COMPLETE!</string>
    <string name="game_over">TRY AGAIN!</string>
    <string name="paused">PAUSED</string>
    <string name="resume">RESUME</string>
    <string name="restart">RESTART</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="home">HOME</string>
    <string name="score">SCORE</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="shots">SHOTS</string>
    <string name="sound">Sound FX</string>
    <string name="music">Music</string>
    <string name="haptics">Vibration</string>
    <string name="world_1">World 1 - Sunny Meadows</string>
    <string name="world_2">World 2 - Candy Kingdom</string>
    <string name="world_3">World 3 - Starlight Cavern</string>
</resources>